basic product endpoints working
