# backend/server/routes.js
@@ -1,5 +1,7 @@
 import examplesRouter from './api/controllers/examples/router.js';
+import productsRouter from './api/controllers/products/router.js';
 
 export default function routes(app) {
   app.use('/api/v1/examples', examplesRouter);
+  app.use('/api/v1/products', productsRouter);
 }
